--- a/Raul/static/Raul/CSS/main.css
+++ b/Raul/static/Raul/CSS/main.css
@@ -612,17 +612,9 @@ nav ul li a:hover{
 
 @media only screen and (min-width:769px) and (max-width:1024px){
 
-    #store{
-        display: none;
-    }
-
-    .shopBanner{
-        display: none;
-    }
-
-    header{
+    .headers{
         display: grid;
-        height: 4em;
+        height: 5em;
         grid-template-columns: auto 5em;
     }
 
@@ -631,14 +623,14 @@ nav ul li a:hover{
         margin-top: 15%;
     }
     
-    header figcaption img{
+    .headers figcaption img{
         margin-left: 2em;
         margin-bottom:0.5em;
         width:7%;
     }
 
     nav ul li a{
-        text-align: left;
+        text-align: center;
         font-size: 3.5em;
         display: block;
         padding: 3%;
@@ -652,6 +644,14 @@ nav ul li a:hover{
     }
 
     figure{
+        display: none;
+    }
+
+    #category{
+        display: none;
+    }
+
+    #store{
         display: none;
     }
 
@@ -681,10 +681,58 @@ nav ul li a:hover{
         font-weight:700;
     }
 
+    .bannerHeading figcaption a button{
+        background:transparent;
+        margin:20px;
+        font-family: 'Roboto', sans-serif;
+        font-size:0.5em;
+        outline: none;
+        padding:30px;
+        border: none;
+        color: white;
+        transition: 0.5s ease;
+        display: block;
+        margin-right: auto;
+        margin-left: auto;
+        border: 1px solid white;
+        box-sizing: border-box;
+        font-weight: bold;
+    }
+
+    .bannerHeading figcaption a button:hover{
+        background-color: white;
+        color:#595959;
+        cursor: pointer;
+    }
+
+    .shopBanner{
+        width:100%;
+        height:450px;
+        scroll-snap-align: start;
+        color: #cfbb63;
+        text-align: center;
+        padding-top:5em;
+        font-family: 'Roboto Condensed', sans-serif;
+    }
+
+    .shopBanner figcaption{
+        font-size:18em;
+    }
+
+    .shopBanner a{
+        font-size:1em;
+        color:#cfbb63;
+    }
+
+    .shopBanner a:hover{
+        color:orange;
+    }
+
+
     .furniture{
         height:700px;
         width:100%;
-        background-color: white;
+        background-color: #595959;
         scroll-snap-align: start;
         padding:10px;
     }
@@ -692,8 +740,8 @@ nav ul li a:hover{
     .shopBack{
         display: flex;
         flex-wrap: nowrap;
-        margin:50px;
-        background-color: indianred;
+        margin:20px;
+        background-color: rgba(0,0,0,0.5);
         width:95vw;
         height:95vh;
     }
@@ -702,7 +750,7 @@ nav ul li a:hover{
         font-size:6em;
         font-family: 'Roboto Condensed';
         margin:30% .5em;
-        color: white;
+        color: #cfbb63;
         opacity: 1;
     }
 
@@ -712,23 +760,27 @@ nav ul li a:hover{
         font-weight: 700;
         letter-spacing: 0.18em;
         text-align: center;
-        color: whitesmoke;
+        color: #cfbb63;
         font-family: 'Roboto Condensed';
+    }
+
+    .furnitureHeading .seeMore{
+        display: none;
     }
 
     .linksShop a{
         text-decoration: none;
-        color:whitesmoke;
+        color:#cfbb63;
     }
 
     .linksShop a:hover{
-        color: black;
+        color:orange;
         font-family: 'Roboto Condensed';
     }
 
     .shopNow {
         font-size:0.2em;
-        font-family:'Roboto';
+        font-family:'Roboto',sans-serif;
         letter-spacing: 2.2em;
         font-weight: 700;
         text-align: center;
@@ -773,39 +825,10 @@ nav ul li a:hover{
 
     #Lighting{
         letter-spacing: 0.1em;
-        color:black
-    }
-
-    #lighting .furnitureHeading .linksShop a{
-        color:black;
-    }
-
-    #lighting .furnitureHeading .linksShop a:hover{
-        color:darkred;
-    }
-
-    #lighting .furnitureHeading .linksShop{
-        color:black;
-    }
-
-    #lighting .shopNow{
-        color:black;
-    }
-
-    #lighting{
-        background-color: #ffccbc;
     }
 
     #Floral{
         letter-spacing: 0.25em;
-    }
-
-    #flower{
-        background-color: #C96567;
-    }   
-
-    #table{
-        background-color: #86C232;
     }
 
     #table .shopNow{
@@ -818,10 +841,6 @@ nav ul li a:hover{
 
     #wall .furnitureHeading{
         letter-spacing: 0.1em;
-    }
-
-    #decorative .furnitureHeading{
-        margin:20% 0.5em;
     }
 
     .contact{
@@ -1075,7 +1094,7 @@ nav ul li a:hover{
         flex-wrap: nowrap;
         margin:50px;
         width:95vw;
-        height:750px;
+        height:700px;
     }
 
     .furnitureHeading{
